--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css">
+    <!-- <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css"> -->
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -27,7 +27,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script>
+    <!-- <script src="bower_components/sweetalert2/dist/sweetalert2.min.js"></script> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
