--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="manifest" href="https://imgur.com/55b96VJ.jpg">
+    <link rel="shortcut icon" href="https://imgur.com/55b96VJ.jpg">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Lobster|Open+Sans+Condensed:300|Raleway" rel="stylesheet">
     <!-- <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.min.css"> -->
     
